Add new topics of today's class

--- a/07_30.html
+++ b/07_30.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>30_07</title>
     <link rel="icon" type="image/jpeg" href="assests/FotoSamin.jpeg">
 </head>
 <body>
-    
+    <a href="home.html"> 
+           <p>Home</p>
+        </a>
+
+            <img src="imagens/seta_voltar.png" 
+                 alt="**:(**"
+                 height="100"
+                 width="50" >
+
 </body>
 </html>
