--- a/home.html
+++ b/home.html
@@ -7,6 +7,24 @@
     <link rel="icon" type="image/jpeg" href="assests/FotoSamin.jpeg">
 </head>
 <body>
-    <!--Fazer o home com página para todos os exercícios-->
+     <h1 id="titulo">HOME</h1>
+     <br>
+     <h2>Aulas:</h2>
+        <a href="07_30.html"> 
+           <p>30/07</p>
+        </a>
+        <p><a href ="08_06.html">
+           <p>06/08</p>
+           <a/>
+    <br>
+    <h3>Tarefas específicas:</h3>
+    <a href="08_06tabela.html">
+        <p>06/08 Tabela</p>
+    </a>
+    <br>
+    <br>
+    <a href="#titulo">
+        <p>Topo</p>
+    </a>
 </body>
 </html>
