--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Home</title>
-    <link rel="icon" type="image/jpeg" href="assests/FotoSamin.jpeg">
+    <link rel="icon" type="image/jpg" href="assests/DSC01460.jpg">
 </head>
 <body>
      <h1 id="titulo">HOME</h1>
@@ -16,10 +16,16 @@
         <p><a href ="08_06.html">
            <p>06/08</p>
            <a/>
+           <a href="08_13.html">
+               <p>13/08</p>
+           </a>
     <br>
     <h3>Tarefas específicas:</h3>
     <a href="08_06tabela.html">
         <p>06/08 Tabela</p>
+    </a>
+    </a>
+    <a href="08_13formulario.html"><p>Atividade do dia</p>
     </a>
     <br>
     <br>
