--- a/08_06.html
+++ b/08_06.html
@@ -35,7 +35,24 @@
     <li>Item 3</li>
 </ol>
    <br>
-
+<h1 id="titulo">Tabela</h1>
+    <table border="1" width="100%" height="50%">
+      <tr>
+        <td align="left">Linha 1 Coluna 1</td>
+        <td align="center">Linha 1 Coluna2</td>
+        <td align="right">Linha 1 Coluna3</td>
+      </tr>
+        <tr>
+            <td valign="top">Linha 2 Coluna 1</td>
+            <td valign="middle">Linha 2 Coluna2</td>
+            <td valign="bottom">Linha 3 Coluna 3</td>
+            </tr>
+            <tr>
+                <td>Linha 3 Coluna 1</td>
+                <td>Linha 3 Coluna 2</td>
+                <td>Linha 3 Coluna 3</td>
+            </tr>
+    </table>
    <a href= "home.html">
     <p>Home</p>
    </a>
