--- a/08_06tabela.html
+++ b/08_06tabela.html
@@ -10,11 +10,11 @@
 <body>
     <h1 id="Titulo">Exercício tabela</h1>
     <table border="1" >
-     <tr>
+      <tr>
         <td align="right">Nome</td>
         <td><input type="text"></td>
         <td rowspan="2">
-            <img width="100" src="assests/DSC01460.jpg" alt="Foto Samin">
+            <img width="100" src="assests/DSC0460.jpg" alt="Foto">
         </td>
      </tr>
      <tr>
@@ -43,7 +43,7 @@
             <input type="reset" value="Limpar">
             <input type="submit" value="Enviar">
         </td>
-     </tr>
+      </tr>
     </table>
     <br>
     <a href="#Titulo">
