--- a/home.html
+++ b/home.html
@@ -13,12 +13,13 @@
         <a href="07_30.html"> 
            <p>30/07</p>
         </a>
-        <p><a href ="08_06.html">
+        <a href ="08_06.html">
            <p>06/08</p>
            <a/>
            <a href="08_13.html">
                <p>13/08</p>
            </a>
+           
     <br>
     <h3>Tarefas específicas:</h3>
     <a href="08_06tabela.html">
@@ -26,6 +27,8 @@
     </a>
     </a>
     <a href="08_13formulario.html"><p>Atividade do dia</p>
+    </a>
+    <a href="UsandoCss.html"><p>Usando CSS</p>
     </a>
     <br>
     <br>
