add last HTML class

--- a/08_13formulario.html
+++ b/08_13formulario.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="Titulo">Currículo</h1>
     <table border="1" >
+        <form action="">
      <tr>
         <td align="right">Nome</td>
         <td><input type="text"></td>
@@ -18,7 +19,7 @@
      </tr>
      <tr>
         <td align="right">Email</td>
-        <td><input type="email"></td>
+        <td><input type="email" name="email"></td>
         <!--<td>Linha2 Coluna3</td>-->
      </tr>
      <tr>
@@ -152,5 +153,6 @@
     <br>
 
     <a href="home.html">Home</a>
+</form>
 </body>
 </html>
