--- a/08_06tabela.html
+++ b/08_06tabela.html
@@ -8,6 +8,9 @@
 
 </head>
 <body>
+    <form>
+
+   
     <h1 id="Titulo">Exercício tabela</h1>
     <table border="1" >
       <tr>
@@ -32,15 +35,17 @@
         <td colspan="2"
         valign="top" align="center">
         opções: 1,2 ou outro
-        <select name="" id="">
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
+        <select name="semestre" id="as">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
         </select></td>
      </tr>
      <tr>
-        <td colspan="4">
+        <td colspan="2">
             <input type="reset" value="Limpar">
+        </td>
+        <td colspan="2">
             <input type="submit" value="Enviar">
         </td>
       </tr>
@@ -52,5 +57,6 @@
     <a href="home.html">
         <p>Home</p>
     </a>
+     </form>
 </body>
 </html>
