--- a/08_13.html
+++ b/08_13.html
@@ -13,7 +13,7 @@
         placeholder = é o comentário que aparece quando o campo é vazio
         name = será o nome do parâmetro enviado-->
         <label for="in_nome">Nome:</label><!--Como usar label-->
-        Text: <input type="text" placeholder="Digite o seu nome">
+        Text: <input type="text" name ="oi" placeholder="Digite o seu nome">
         <br>
         <br>
         Text: <input type="text" id="in_nome" placeholder="Digite o seu nome">
@@ -22,14 +22,14 @@
     </form>
     <form action="">
         Text: <input type="text" placeholder="Digite o seu nome">
-        <input type="week" name="enviar" id="enviar"><!--Tem vários tipos de types-->
+        <input type="submit" name="enviar" id="enviar"><!--Tem vários tipos de types-->
         <br>
         Pagamento antecipado:<br><br>
         <label for="inp_pag_s">Sim</label>
         Cartão <input type="radio" name="inp_pag" id="inp_pag_s">
         <br><!--name vai aparecer na url e o id vai usar no resto-->
         <label for="inp_pag_n">Não</label>
-        Especie<input type="radio" name="inp_pag" id="inp_pag_n">
+        Especie<input type="radsio" name="inp_pag" id="inp_pag_n">
 
     </form>
     <form>
